--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -4,7 +4,7 @@
     <div>{{ partial "audio" . }}</div>
     <section>
       <p class = 'intro_headline'>Se o conhecimento pode criar problemas, não é através da ignorância que podemos solucioná-los.</p>
-      <p class = 'intro_desc'><strong>Issac Asimov</strong></p>
+      <p class = 'intro_desc'><strong> - Issac Asimov</strong></p>
     </section>
   </div>
 </div>
