o fim da eternide

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
   <h1 class='post_title'>{{ .Title }}</h1>
 </section>
 <div class = 'post'>
-  <article class='post_content'>
+  <article class='post_content' style = 'text-align: justify;'>
     {{- .Content }}
     <div class = 'post_extra'>
       {{- partial "copy" . }}
